--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 node_js:
-  - "stable"
+  - 15
 cache:
   directories:
   - node_modules
@@ -10,6 +10,7 @@ deploy:
   provider: pages
   skip_cleanup: true
   github_token: $github_token
-  local_dir: build
+  local_dir: dist
+  target_branch: gh-pages
   on:
     branch: master
